--- a/LLBLGenLiteExamples.Tests/LLBLGenLiteExamples.Tests.csproj
+++ b/LLBLGenLiteExamples.Tests/LLBLGenLiteExamples.Tests.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IntegrationTests.cs" />
+    <Compile Include="IsChangedFlagIntegrationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
